--- a/admin/coaches.yml
+++ b/admin/coaches.yml
@@ -1,2 +1,8 @@
-- name: <human-name>
-  user: github-name
+- name: Nur
+  user: nurabunamus
+- name: Yoshi
+  user: yoshimalaise
+- name: Unmesh
+  user: unmeshvrije
+- name: Evan
+  user: colevandersWands
