--- a/admin/org.yml
+++ b/admin/org.yml
@@ -1,4 +1,4 @@
-name: <your-org-name>
-home: <your-home-repo-name>
-calendar: ./assets/calendar.jpg
-forum: 'discord, slack, ... whatever link'
+name: Kiwi 
+home: pilot
+calendar: ''
+forum: ''
