--- a/admin/modules.yml
+++ b/admin/modules.yml
@@ -1,9 +1,14 @@
-description: Learn to plan and build web applications as a team.
+description: Take your first steps into collaborative programming.
 board: 1
 path:
-  - name: 0. Precourse
-    description: Set up your accounts and prepare your development environment.
+  - name: 0. Precourse.
     url: https://github.com/DeNepo/precourse
+    description: >-
+      Set up your development environment and GitHub account, then find your way
+      around this repository so you're ready to roll on day 1.
+
+      - **Deliverables**: [listed in the module
+      repository](https://github.com/DeNepo/precourse/tree/main/deliverables)
     weeks: 1
     milestone: 1
     state: open
@@ -11,174 +16,82 @@ path:
     description: >-
       Learn the workflows you need to develop individually and in a group.
 
-      - **Week 1**: Chapters 0, 1, 2
-        - Lesson Plan: [VSCode and
-      Git](https://github.com/DeNepo/workflows/blob/main/lesson-plans/vscode-and-git.md)
-        - Deliverable: [Student Bio
-      PR](https://github.com/DeNepo/workflows/blob/main/deliverables/student-bio-pr.md)
+      - **Week 1**: Chapters 0, 1, 2, 3 - _Local/remote workflows for **individual and
+      collaborative development**._
+          - **Individual Deliverable**:  [Student Bio PR](https://github.com/DeNepo/workflows/blob/main/deliverables/student-bio-pr.md)
+          - **Collaborative Deliverable**:  [Group Intro Repo](https://github.com/DeNepo/workflows/blob/main/deliverables/group-introduction-repo.md)
 
-      - **Week 2**: Chapter 3
-        - Lesson Plan: [GitHub Project
-      Management](https://github.com/DeNepo/workflows/blob/main/lesson-plans/github-project-management.md)
-        - Deliverable: [Group Intro
-      Repo](https://github.com/DeNepo/workflows/blob/main/deliverables/group-introduction-repo.md)
     url: https://github.com/DeNepo/workflows
-    weeks: 2
+    weeks: 1
     milestone: 2
     state: open
-  - name: 2. Agile Development
+  - name: 2. Welcome to JS
     description: >-
-      Practice collaboratively planning and developing HTML/CSS websites.
+      Learn to understand, discuss, modify and develop interactive programs.
 
-      - **Week 1**: Chapters 0, 1 - Following Plans
-        - Lesson Plan: [Planning and
-      Collaborating](https://github.com/DeNepo/agile-development/blob/main/lesson-plans/planning-and-collaborating.md)
-        - Deliverable: [All About
-      Trees](https://github.com/DeNepo/agile-development/blob/main/deliverables/all-about-trees)
+      - **Week 1**: Chapters 0's, 1, 2 - _Understand **the big picture** of software
+      development and master **just enough JavaScript** to build your
+      foundations._ 
 
-      - **Week 2**: Chapter 2 - Writing Plans
-        - Lesson Plan: [User-Centered
-      Development](https://github.com/DeNepo/agile-development/blob/main/lesson-plans/user-centered-development.md)
-        - Deliverable: [Loruki
-      Rebuild](https://github.com/DeNepo/agile-development/blob/main/deliverables/loruki-rebuild.md)
+      - **Week 2**: Chapter  3 - _Learn different ways to **understand** a program._
 
-      - **Week 3**: Chapter 3 - Adapting Plans
-        - Lesson Plan: [Being
-      Agile](https://github.com/DeNepo/agile-development/blob/main/lesson-plans/being-agile.md)
-        - Deliverable: Begin [HYF
-      Redesign](https://github.com/DeNepo/agile-development/blob/main/deliverables/hyf-redesign.md)
+      - **Week 3**: Chapter 4 - _Practice different skills involved in **developing**
+      programs._
 
-      - **Week 4**: Chapter 3 - Adapting Plans
-        - Lesson Plan: Group Project Session
-        - Deliverable: Finish [HYF
-      Redesign](https://github.com/DeNepo/agile-development/blob/main/deliverables/hyf-redesign.md)
-    url: https://github.com/DeNepo/agile-development
-    weeks: 4
+    url: https://github.com/DeNepo/welcome-to-js
+    weeks: 3
     milestone: 3
     state: open
-  - name: 3. UX/UI Design
+  - name: 3. Inside JS
     description: >-
-      Explore design thinking process and placing your users at the center of
-      your development process.
+      Take a deep dive into JavaScript; explore some it's trickiest features and
+      how to use them. 
 
-      - **Week 1**: Chapter 1
-        - Lesson Plan: [Design
-      Thinking](https://github.com/DeNepo/ux-ui-design/blob/main/lesson-plans/design-thinking.md)
-        - Deliverable: [Practical
-      Case](https://github.com/DeNepo/ux-ui-design/blob/main/deliverables/practical-case.md)
+      - **Week 1**: Chapters 0, 1, 2, 3 - _Use **just enough DOM** to write interactive
+      programs using control flow._ 
 
-      - **Week 2**: Chapters 2, 3
-        - Lesson Plan: [Gestalt Principles &
-      Figma](https://github.com/DeNepo/ux-ui-design/blob/main/lesson-plans/gestalt-and-figma.md)
-        - Deliverable: [Co-Design your Home
-      Page](https://github.com/DeNepo/ux-ui-design/blob/main/deliverables/co-design-your-home-page)
-    url: https://github.com/DeNepo/ux-ui-design
-    weeks: 2
-    state: open
+      - **Week 2**: Chapters 4, 5, 6, 7 - _Use functions to **abstract away** your
+      program's implementation._
+
+      - **Week 3**: Chapters 8, 9, 10 - _Use arrays and objects to store **program
+      state** between interactions._ 
+          - **Collaborative Deliverable**: A stateful web page, your choice!
+
+    url: https://github.com/DeNepo/inside-js
+    weeks: 3
     milestone: 4
-  - name: 4. Welcome to JS
+    state: open
+  - name: 4. Behavior, Strategy, Implementation
     description: >-
-      Learn to read small programs, and to write code that other people can
-      understand.
+      Explore problem solving in JavaScript, learn to understand, write and
+      review solutions to JS coding challenges.
 
-      - **Week 1**: Chapters 0, 1, 2
-        - Lesson Plan: [Computers and
-      Developers](https://github.com/DeNepo/welcome-to-js/blob/master/lesson-plans/computers-and-developers)
-        - Study Priorities: _What is Programming?_ and _Just Enough JS_
+      - **Week 1**: Chapters 1, 2 - _**Describe** and **Remix** other people's solutions to
+      coding challenges._  
 
-      - **Week 2**: Chapters 2, 3
-        - Lesson Plan: [DevTools
-      Debugger](https://github.com/DeNepo/welcome-to-js/blob/master/lesson-plans/devtools-debugger)
-        - Study Priorities: _Just Enough JS_ and _Understanding Programs_
+      - **Week 2**: Chapter 3 - _**Write** multiple solutions to coding challenges at your
+      level._ 
 
-      - **Week 3**: Chapter 4
-        - Lesson Plan: [Writing and
-      Reviewing](https://github.com/DeNepo/welcome-to-js/blob/master/lesson-plans/writing-and-reviewing)
-        - Study Priorities: _Developing Programs_
-    url: https://github.com/DeNepo/welcome-to-js
+      - **Week 3**: Chapter 4 - _**Review** your classmate's solutions to coding
+      challenges._
+          - **Collaborative Deliverable**: Solutions and reviews in a group repository.
+
+    url: https://github.com/DeNepo/behavior-strategy-implementation
     weeks: 3
     milestone: 5
     state: open
-  - name: 5. Inside JS
+  - name: 5. Learning in Public
     description: >-
-      Take a deep dive into JavaScript and explore some it's trickiest
-      features.  Build your foundations now so later you can focus on the fun
-      stuff.
-    url: https://github.com/DeNepo/inside-js
-    weeks: 4
-    milestone: 6
-    state: open
-  - name: 6. Behavior, Strategy, Implementation
-    description: >-
-      Explore problem solving in JavaScript, learn how to write and review
-      solutions to JS coding challenges.
+      In groups of 2-3 you will research and write a tutorial about any topic
+      that builds on what you've learned so far.
 
-      - **Week 1**: Chapter 1
-        - Lesson Plan: [Solution
-      Write-Ups](https://github.com/DeNepo/behavior-strategy-implementation/blob/master/lesson-plans/solution-write-ups.md)
-        - Study Priorities: Try to write up at least 3 solutions during the
-      week.
+      - **Week 1**: Research - _Select your topic and study it._
+          - **Collaborative Deliverable**:  A repository with your shared notes, study resources and any practice exercises/projects you studied.
+ 
+      - **Week 2**: Share - _Create a tutorial to share what you learned._
+          - **Collaborative Deliverable**:  A tutorial with additional study resources, in a format that works well for your topic.  This could be a video, a blog post, a repository of exercises, ... follow your inspiration!
 
-      - **Week 2**: Chapters 2
-        - Lesson Plan: [Function
-      Design](https://github.com/DeNepo/behavior-strategy-implementation/blob/master/lesson-plans/function-design.md)
-        - Study Priorities: Try to solve 2-4 exercises from each section of the
-      chapter
-
-      - **Week 3**: Chapter 3
-        - Lesson Plan: [Code
-      Review](https://github.com/DeNepo/behavior-strategy-implementation/blob/master/lesson-plans/code-review.md)
-        - Deliverable: [Practice Code
-      Review](https://github.com/DeNepo/behavior-strategy-implementation/blob/master/deliverables/practice-code-review.md)
-    url: https://github.com/DeNepo/behavior-strategy-implementation
-    weeks: 3
-    milestone: 7
-    state: open
-  - name: 7. Separation of Concerns
-    description: >-
-      Learn how to break down interactive web pages into clear tasks that can be
-      shared divided across team.
-    url: https://github.com/DeNepo/separation-of-concerns
-    weeks: 3
-    milestone: 8
-    state: open
-  - name: 8. Asynchronous Programming
-    description: >-
-      Learn how the JavaScript event loop works and how you can use API data in
-      your websites.
-    url: https://github.com/DeNepo/asynchronous-programming
-    weeks: 3
-    milestone: 9
-    state: open
-  - name: 9. Headless CMS
-    description: >-
-      Learn what a Content Management System is and explore how you use one to
-      model the data for your own web applications.
-    url: https://github.com/DeNepo/headless-cms
-    weeks: 3
-    milestone: 10
-    state: open
-  - name: 10. Component Based Design
-    description: >-
-      Practice developing Single Page Apps built from reusable UI components,
-      and explore your first Frontend Framework.
-    url: https://github.com/DeNepo/component-based-design
-    weeks: 3
-    milestone: 11
-    state: open
-  - name: 11. Individual Project
-    description: >-
-      Prepare for the final project by individually designing, planning,
-      building and deploying your own fullstack web app.
-    url: https://github.com/DeNepo/individual-project
+    url: ''
     weeks: 2
-    milestone: 12
-    state: open
-  - name: 12. Final Project
-    description: >-
-      Put it all together!  Work in teams to identify your target users and a
-      real-world problem they face, then deliver a web app to meet their needs.
-    url: https://github.com/DeNepo/final-project
-    weeks: 6
-    milestone: 13
+    milestone: 6
     state: open
