--- a/admin/modules.yml
+++ b/admin/modules.yml
@@ -29,7 +29,7 @@ path:
     description: >-
       Learn to understand, discuss, modify and develop interactive programs.
 
-      - **Week 1**: Chapters 0's, 1, 2 - _Understand **the big picture** of software
+      - **Week 1**: Chapters 0s, 1, 2 - _Understand **the big picture** of software
       development and master **just enough JavaScript** to build your
       foundations._ 
 
@@ -37,6 +37,7 @@ path:
 
       - **Week 3**: Chapter 4 - _Practice different skills involved in **developing**
       programs._
+          - **Collaborative Deliverable**:  Plan and develop a web page using _Just Enough JavaScript_ and the _DOM I/O_ library.
 
     url: https://github.com/DeNepo/welcome-to-js
     weeks: 3
@@ -47,7 +48,7 @@ path:
       Take a deep dive into JavaScript; explore some it's trickiest features and
       how to use them. 
 
-      - **Week 1**: Chapters 0, 1, 2, 3 - _Use **just enough DOM** to write interactive
+      - **Week 1**: Chapters 0s, 1, 2, 3 - _Use **just enough DOM** to write interactive
       programs using control flow._ 
 
       - **Week 2**: Chapters 4, 5, 6, 7 - _Use functions to **abstract away** your
@@ -55,7 +56,7 @@ path:
 
       - **Week 3**: Chapters 8, 9, 10 - _Use arrays and objects to store **program
       state** between interactions._ 
-          - **Collaborative Deliverable**: A stateful web page, your choice!
+          - **Collaborative Deliverable**: Plan and develop a stateful web page using _Just Enough DOM_.
 
     url: https://github.com/DeNepo/inside-js
     weeks: 3
@@ -66,13 +67,13 @@ path:
       Explore problem solving in JavaScript, learn to understand, write and
       review solutions to JS coding challenges.
 
-      - **Week 1**: Chapters 1, 2 - _**Describe** and **Remix** other people's solutions to
+      - **Week 1**: Chapters 0s, 1 - _**Analyze** and **Remix** other people's solutions to
       coding challenges._  
 
-      - **Week 2**: Chapter 3 - _**Write** multiple solutions to coding challenges at your
+      - **Week 2**: Chapter 2 - _**Write** solutions to coding challenges at your
       level._ 
 
-      - **Week 3**: Chapter 4 - _**Review** your classmate's solutions to coding
+      - **Week 3**: Chapter 3 - _**Review** your classmate's solutions to coding
       challenges._
           - **Collaborative Deliverable**: Solutions and reviews in a group repository.
 
@@ -87,7 +88,6 @@ path:
 
       - **Week 1**: Research - _Select your topic and study it._
           - **Collaborative Deliverable**:  A repository with your shared notes, study resources and any practice exercises/projects you studied.
- 
       - **Week 2**: Share - _Create a tutorial to share what you learned._
           - **Collaborative Deliverable**:  A tutorial with additional study resources, in a format that works well for your topic.  This could be a video, a blog post, a repository of exercises, ... follow your inspiration!
 
